Updated file per Nick's feedback

--- a/Josh-Koehnke/f2_siterebuild.html
+++ b/Josh-Koehnke/f2_siterebuild.html
@@ -26,20 +26,23 @@
     </nav>
 
     <section>
-      <button>Sign Up</button>
-      <button>Sign in</button>
+      <a>Sign Up</a>
+      <a>Sign in</a>
     </section>
 
     <form>
       <input type="search" placeholder="Search"></input>
-      <button>Create</button>
-      <button>Forums</button>
     </form>
+
+    <nav>
+      <a>Create</a>
+      <a>Forums</a>
+    </nav>
   </header>
 
   <main>
     <section>
-      <img="logo" title="Genius | Annotate the world"/>
+      <img="logo" alt="Genius" title="Genius | Annotate the world"/>
       <button>Sign Up</button>
       <button>Learn More>></button>
 
@@ -59,70 +62,69 @@
           <li><a href>Law</a></li>
           <li><a href>Tech</a></li>
           <li><a href>X</a></li>
-          <li><a href>Meta</a></li>
         <ul>
       </nav>
     </section>
 
     <section>
       <article>
-        <img="Batman slapping Robin" title="LAW GENIUS"/>
+        <img="Batman slapping Robin" alt="Batman" title="LAW GENIUS"/>
         <h1>Vosburg v. Putney</h1>
         <h2>Supreme Court of Wisconsin</h2>
         <p>25 annotations</p>
       </article>
 
       <article>
-        <img="Five" title="RAP GENIUS"/>
+        <img="Five" alt="Five" title="RAP GENIUS"/>
         <h1>Whip It (Remix)</h1>
         <h2>ILoveMakonnen</h2>
         <p>23 annotations</p>
       </article>
 
       <article>
-        <img="Five" title="ROCK GENIUS"/>
+        <img="SS" alt="Sufjan Stevens" title="ROCK GENIUS"/>
         <h1>John My Beloved</h1>
         <h2>Sufjan Stevens</h2>
         <p>21 annotations</p>
       </article>
 
       <article>
-        <img="Five" title="LIT GENIUS"/>
+        <img="Book" alt="Book" title="LIT GENIUS"/>
         <h1>The Waste Land</h1>
         <h2>T.S. Eliot</h2>
         <p>319 annotations</p>
       </article>
 
       <article>
-        <img="Five" title="POP GENIUS"/>
+        <img="Rihanna" alt="Rihanna" title="POP GENIUS"/>
         <h1>Bitch Better Have My Money</h1>
         <h2>Rihanna</h2>
         <p>12 annotations</p>
       </article>
 
       <article>
-        <img="Five" title="COUNTRY GENIUS"/>
+        <img="Band" alt="Pokey LaFarge" title="COUNTRY GENIUS"/>
         <h1>Something In The Water</h1>
         <h2>Pokey LaFarge</h2>
         <p>3 annotations</p>
       </article>
 
       <article>
-        <img="Five" title="R&B GENIUS"/>
+        <img="IMG" alt="Wale" title="R&B GENIUS"/>
         <h1>The Matrimony</h1>
         <h2>Wale</h2>
         <p>17 annotations</p>
       </article>
 
       <article>
-        <img="Five" title="NEWS GENIUS"/>
+        <img="ODB" alt="Ol' Dirty" title="NEWS GENIUS"/>
         <h1>Never Before Seen: Ol' Dirty Bastard Raw and Uncut Interview</h1>
         <h2>Ol' Dirty Bastard</h2>
         <p>40 annotations</p>
       </article>
 
       <article>
-        <img="Five" title="HISTORY GENIUS"/>
+        <img="Malcolm X" alt="Malcolm X" title="HISTORY GENIUS"/>
         <h1>Who Taught You To Hate Yourself?</h1>
         <h2>Malcolm X</h2>
         <p>21 annotations</p>
@@ -144,7 +146,6 @@
           <li><a href>Law</a></li>
           <li><a href>Tech</a></li>
           <li><a href>X</a></li>
-          <li><a href>Meta</a></li>
         </ul>
       </nav>
   </main>
